@@ -143,6 +143,8 @@ public class Prayer_Fertilize extends Prayer
 							A=M.fetchEffect("MasterGardening");
 						if(A==null)
 							A=M.fetchEffect("Gardening");
+						if(A==null)
+							A=M.fetchEffect("Shrooming");
 						if(A!=null)
 							A.setAbilityCode(1);
 					}
