@@ -653,7 +653,7 @@ the target and a compatible partner will always result in pregnancy.
 CHANT_FERTILIZATION=<ABILITY>\
 Usage    : CHANT FERTILIZATION\n\r\
 Example  : chant fertilization\n\r\
-The chanter fortifies the land, making yields from Foraging and Farming \
+The chanter fortifies the land, making yields from Foraging, Farming, and Shrooming \
 double for a whole day per level of the druid.  It will also permit \
 things to be grown that might otherwise not be able.  This \
 chant is permanent on owned property.
