@@ -486,8 +486,8 @@ Example  : compost carrots\n\r\
 :        : compost bundle 100 compost\n\r\
 This skill allows the player to quickly convert any vegetation or meat resources, \
 such as those from the forage, butcher, or fishing skills, into compost items. These \
-compost items can then be used to greatly increase the yield of the Farming \
-skill.
+compost items can then be used to greatly increase the yield of the Farming and Shrooming \
+skills.
 
 COBBLE=COBBLING
 COBBLING=<ABILITY>\
