@@ -1131,7 +1131,7 @@ they might be presently.
 PRAYER_FERTILIZE=<ABILITY>\
 Usage    : PRAY FERTILIZE\n\r\
 Example  : pray fertilize\n\r\
-The caster blesses the land, making yields from Foraging and Farming \
+The caster blesses the land, making yields from Foraging, Shrooming, and Farming \
 double for a whole day per level of the caster. This effect is permanent \
 on owned property.
 
